tree-walk-interpreter/tests/test_programs/parsing/05_enums_and_match.yolo
// 05 — Enums and pattern matching
// Covers: unit variants, data-carrying variants, impl on enums, match as statement
//         and expression, destructuring, guards, wildcard, literal patterns,
//         Perhaps<T>, nope, Result<T,E>, .yolo().

enum Direction {
    North,
    South,
    East,
    West,
}

impl Direction {
    fun opposite(self) -> Direction {
        match self {
            Direction::North => Direction::South,
            Direction::South => Direction::North,
            Direction::East  => Direction::West,
            Direction::West  => Direction::East,
        }
    }

    fun to_string(self) -> String {
        match self {
            Direction::North => "North",
            Direction::South => "South",
            Direction::East  => "East",
            Direction::West  => "West",
        }
    }
}

enum Shape {
    Circle { radius: Float },
    Rectangle { width: Float, height: Float },
    Triangle { base: Float, height: Float },
}

impl Shape {
    fun area(self) -> Float {
        match self {
            Shape::Circle { radius } => 3.14159 * radius * radius,
            Shape::Rectangle { width, height } => width * height,
            Shape::Triangle { base, height } => 0.5 * base * height,
        }
    }

    fun describe(self) -> String {
        match self {
            Shape::Circle { radius } =>
                "circle with radius " + float_to_string(radius),
            Shape::Rectangle { width, height } =>
                "rect " + float_to_string(width) + "x" + float_to_string(height),
            Shape::Triangle { base, height } =>
                "triangle base=" + float_to_string(base),
        }
    }
}

fun classify(n: Int) -> String {
    match n {
        0       => "zero",
        1       => "one",
        n if n < 0 => "negative",
        _       => "large",
    }
}

fun safe_head(arr: Int[]) -> Perhaps<Int> {
    if (array_len(arr) == 0) {
        return nope;
    }
    return arr[0];
}

fun safe_div(a: Int, b: Int) -> Result<Int, String> {
    if (b == 0) {
        return Result::Err { error: "division by zero" };
    }
    return Result::Ok { value: a / b };
}

fun main() {
    // --- unit enum and method ---
    let dir = Direction::North;
    println(dir.to_string());                       // North
    println(dir.opposite().to_string());            // South

    // --- data-carrying enum + area ---
    let c = Shape::Circle { radius: 5.0 };
    let r = Shape::Rectangle { width: 4.0, height: 6.0 };
    let t = Shape::Triangle { base: 3.0, height: 8.0 };
    println(float_to_string(c.area()));             // ~78.53975
    println(float_to_string(r.area()));             // 24.0
    println(float_to_string(t.area()));             // 12.0
    println(c.describe());                          // circle with radius 5.0

    // --- match as expression with guards ---
    println(classify(0));     // zero
    println(classify(1));     // one
    println(classify(-5));    // negative
    println(classify(99));    // large

    // --- Perhaps<T> ---
    let full: Int[] = [10, 20, 30];
    let empty: Int[] = [];

    match safe_head(full) {
        Perhaps::Some { value } => println(int_to_string(value)),  // 10
        Perhaps::Nope => println("empty"),
    }
    match safe_head(empty) {
        Perhaps::Some { value } => println(int_to_string(value)),
        Perhaps::Nope => println("empty"),                          // empty
    }

    // --- .yolo() unwrap ---
    let head = safe_head(full).yolo();
    println(int_to_string(head));   // 10

    // --- Result<T, E> ---
    match safe_div(10, 2) {
        Result::Ok { value } => println(int_to_string(value)),     // 5
        Result::Err { error } => println("error: " + error),
    }
    match safe_div(10, 0) {
        Result::Ok { value } => println(int_to_string(value)),
        Result::Err { error } => println("error: " + error),       // error: division by zero
    }

    // --- nested match is an expression ---
    let verdict = match safe_div(6, 3) {
        Result::Ok { value } => "got " + int_to_string(value),
        Result::Err { error } => "failed",
    };
    println(verdict);   // got 2
}
